--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,10 @@ jobs:
             echo $NAMESPACE/node-chromium:$VERSION-$BUILD_DATE 
             echo $NAMESPACE/standalone-chromium:$VERSION-$BUILD_DATE 
             echo $NAMESPACE/node-firefox:$VERSION-$BUILD_DATE 
-            echo $NAMESPACE/standalone-firefox:$VERSION-$BUILD_DATE 
+            echo $NAMESPACE/standalone-firefox:$VERSION-$BUILD_DATE
+            docker push $NAMESPACE/standalone-chromium:$VERSION-$BUILD_DATE 
+            docker push $NAMESPACE/node-firefox:$VERSION-$BUILD_DATE 
+            
             docker save -o multi-arch-images.tar \
               $NAMESPACE/base:$VERSION-$BUILD_DATE \
               $NAMESPACE/node-base:$VERSION-$BUILD_DATE \
