--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,21 +57,21 @@ jobs:
             echo $NAMESPACE/standalone-firefox:$VERSION-$BUILD_DATE
             
             docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-            docker tag $NAMESPACE/base:$VERSION-$BUILD_DATE alanpeng/seleniarm-base:$VERSION-$BUILD_DATE
-            docker tag $NAMESPACE/node-base:$VERSION-$BUILD_DATE alanpeng/seleniarm-node-base:$VERSION-$BUILD_DATE 
-            docker tag $NAMESPACE/hub:$VERSION-$BUILD_DATE alanpeng/seleniarm-hub:$VERSION-$BUILD_DATE 
-            docker tag $NAMESPACE/node-chromium:$VERSION-$BUILD_DATE alanpeng/seleniarm-node-chromium:$VERSION-$BUILD_DATE 
-            docker tag $NAMESPACE/standalone-chromium:$VERSION-$BUILD_DATE alanpeng/seleniarm-standalone-chromium:$VERSION-$BUILD_DATE 
-            docker tag $NAMESPACE/node-firefox:$VERSION-$BUILD_DATE alanpeng/seleniarm-node-firefox:$VERSION-$BUILD_DATE 
-            docker tag $NAMESPACE/standalone-firefox:$VERSION-$BUILD_DATE alanpeng/seleniarm-standalone-firefox:$VERSION-$BUILD_DATE
+            docker tag $NAMESPACE/base:$VERSION-$BUILD_DATE alanpeng/seleniarm-base:$VERSION-$BUILD_DATE-`uname -m`
+            docker tag $NAMESPACE/node-base:$VERSION-$BUILD_DATE alanpeng/seleniarm-node-base:$VERSION-$BUILD_DATE-`uname -m` 
+            docker tag $NAMESPACE/hub:$VERSION-$BUILD_DATE alanpeng/seleniarm-hub:$VERSION-$BUILD_DATE-`uname -m` 
+            docker tag $NAMESPACE/node-chromium:$VERSION-$BUILD_DATE alanpeng/seleniarm-node-chromium:$VERSION-$BUILD_DATE-`uname -m` 
+            docker tag $NAMESPACE/standalone-chromium:$VERSION-$BUILD_DATE alanpeng/seleniarm-standalone-chromium:$VERSION-$BUILD_DATE-`uname -m` 
+            docker tag $NAMESPACE/node-firefox:$VERSION-$BUILD_DATE alanpeng/seleniarm-node-firefox:$VERSION-$BUILD_DATE-`uname -m` 
+            docker tag $NAMESPACE/standalone-firefox:$VERSION-$BUILD_DATE alanpeng/seleniarm-standalone-firefox:$VERSION-$BUILD_DATE-`uname -m`
 
-            docker push alanpeng/seleniarm-base:$VERSION-$BUILD_DATE
-            docker push alanpeng/seleniarm-node-base:$VERSION-$BUILD_DATE 
-            docker push alanpeng/seleniarm-hub:$VERSION-$BUILD_DATE 
-            docker push alanpeng/seleniarm-node-chromium:$VERSION-$BUILD_DATE 
-            docker push alanpeng/seleniarm-standalone-chromium:$VERSION-$BUILD_DATE 
-            docker push alanpeng/seleniarm-node-firefox:$VERSION-$BUILD_DATE 
-            docker push alanpeng/seleniarm-standalone-firefox:$VERSION-$BUILD_DATE
+            docker push alanpeng/seleniarm-base:$VERSION-$BUILD_DATE-`uname -m`
+            docker push alanpeng/seleniarm-node-base:$VERSION-$BUILD_DATE-`uname -m` 
+            docker push alanpeng/seleniarm-hub:$VERSION-$BUILD_DATE-`uname -m` 
+            docker push alanpeng/seleniarm-node-chromium:$VERSION-$BUILD_DATE-`uname -m` 
+            docker push alanpeng/seleniarm-standalone-chromium:$VERSION-$BUILD_DATE-`uname -m` 
+            docker push alanpeng/seleniarm-node-firefox:$VERSION-$BUILD_DATE-`uname -m` 
+            docker push alanpeng/seleniarm-standalone-firefox:$VERSION-$BUILD_DATE-`uname -m`
 
             docker save -o multi-arch-images.tar \
               $NAMESPACE/base:$VERSION-$BUILD_DATE \
